# pycalista-ista

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  consulta_radio.xls  consulta_radio_2.xls  entry_points.txt  example.py  flake.nix  mkdocs.yml  pyproject.toml  setup.py  shell.nix
.github/: dependabot.yml  labels.yml
.github/actions/: get_version.py
.github/workflows/: publish.yml  python-publish.yml  run_test.yml
docs/: api.md  index.md  installation.md  usage.md
ista-calista/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  util.py
ista-calista/pycalista_ista/: __init__.py  const.py  consulta.xls  excel_parser.py  exception_classes.py  pycalista_ista.py  types.py  virtual_api.py
ista-calista/translations/: en.json
pycalista_ista/: __init__.py  __version.py  const.py  consumption_parser.py  excel_parser.py  exception_classes.py  invoice_parser.py  invoice_xls_parser.py  pycalista_ista.py  virtual_api.py
pycalista_ista/models/: __init__.py  billed_reading.py  cold_water_device.py  device.py  heating_device.py  hot_water_device.py  invoice.py  reading.py  water_device.py
scripts/: example.py  verify_expired_keycloak.py  verify_relogin.py
tests/: __init__.py  conftest.py  test_device.py  test_heating_device.py  test_parser.py  test_pycalista_ista.py  test_reading.py  test_virtual_api.py  test_water_device.py
tests/data/: consulta_2023-12-29_2024-01-02.xls  consulta_2024-11-30_2025-01-01.xls  consulta_2025-01-10_2025-01-25.xls
